Carmichael's function, primitive roots, more properties for "ord".

* The functions \<Union>, \<Inter>, \<Squnion>, \<Sqinter>
(not the corresponding binding operators) now have the same precedence
as any other prefix function symbol.  Minor INCOMPATIBILITY.

* Slightly more conventional naming schema in structure Inductive.
Minor INCOMPATIBILITY.

* Code generation: command 'export_code' without file keyword exports
code as regular theory export, which can be materialized using the
command-line tools "isabelle export" or "isabelle build -e" (with
'export_files' in the session ROOT), or browsed in Isabelle/jEdit via
the "isabelle-export:" file-system. To get generated code dumped into
output, use "file \<open>\<close>". Minor INCOMPATIBILITY.

* Code generation for OCaml: proper strings are used for literals.
Minor INCOMPATIBILITY.

* Code generation for Haskell: code includes for Haskell must contain
proper module frame, nothing is added magically any longer.
INCOMPATIBILITY.

* Code generation: slightly more conventional syntax for
'code_stmts' antiquotation.  Minor INCOMPATIBILITY.

* The simplifier uses image_cong_simp as a congruence rule. The historic
and not really well-formed congruence rules INF_cong*, SUP_cong*,
are not used by default any longer.  INCOMPATIBILITY; consider using
declare image_cong_simp [cong del] in extreme situations.

* Simplified syntax setup for big operators under image. In rare
situations, type conversions are not inserted implicitly any longer
and need to be given explicitly. Auxiliary abbreviations INFIMUM,
SUPREMUM, UNION, INTER should now rarely occur in output and are just
retained as migration auxiliary. INCOMPATIBILITY.

* Theory List: the precedence of the list_update operator has changed:
"f a [n := x]" now needs to be written "(f a)[n := x]".

* Theory "HOL-Library.Multiset": the <Union># operator now has the same
precedence as any other prefix function symbol.
